Seo for this website

--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
+    "postbuild": "next-sitemap",
     "lint": "next lint"
   },
   "dependencies": {
-    "@tabler/icons-react": "^3.22.0",
     "@kinfe123/farm-ui": "^1.0.12",
+    "@tabler/icons-react": "^3.22.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.17",
     "next": "15.0.2",
+    "next-sitemap": "^4.2.3",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "tailwind-merge": "^2.5.4"
