--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.11.17",
     "next": "15.0.2",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.4",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-icons": "^5.4.0",
