--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.5.4",
     "three": "^0.171.0"
   },
